<resources>

    <string name="attil_pvt">Attil Private Limited</string>
    <string name="app_name">Attil Delivery</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="no_internet">Please Check Your Internet Connection</string>
    <string name="required">Required</string>
    <string name="retry">Retry</string>
    <string name="new_user">New User?</string>
    <string name="enter_your_password">Password</string>
    <string name="login">Login</string>
    <string name="login_id">Login ID</string>
    <string name="password">Password</string>
    <string name="delivery_title">ATTIL DELIVERY LOGIN</string>
    <string name="notifications">Notifications</string>
    <string name="pick_up">Pick Up</string>
    <string name="drop_off">Drop Off</string>
    <string name="activated_location">Activated Current Location</string>
    <string name="accept_order">Accept Order</string>
    <string name="decline">Decline</string>
    <string name="test1">Loading..</string>
    <string name="waiting_packed">Waiting to be packed</string>
    <string name="view_order">View Order</string>
    <string name="cancel">Cancel</string>
    <string name="delivery_box">Delivery Box</string>
    <string name="delivery_pending">Delivery Pending</string>
    <string name="completed_delivery">Complete Delivery</string>
    <string name="base_url">https://maps.googleapis.com</string>
    <string name="map_key">AIzaSyBTnIdL7_NoNVPsb9jp6CCbCjgn3PeBAo0</string>
    <string name="delivered">Delivered</string>
    <string name="return_completed">Return Completed</string>
    <string name="back">Back</string>
    <string name="order_placed_on">Order Placed On</string>
    <string name="payment_information">Payment Information</string>
    <string name="type">Type</string>
    <string name="amount">Amount</string>
    <string name="status">Status</string>
    <string name="customer_contact_information">Customer Contact Information</string>
    <string name="contact_person">Contact Person</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="addi_mobile_number">Additional Mobile Number</string>
    <string name="call">Call</string>
    <string name="delivery_address">Delivery Address Information</string>
    <string name="current_location">Activated Current Location</string>
    <string name="Packing">Packing</string>
    <string name="Packed">Packed</string>
    <string name="no">NO</string>
    <string name="yes">Yes</string>
    <string name="i_am_reached">I am reached and Delivered</string>
    <string name="on_the_way">On The Way</string>
    <string name="return_requested">Return Requested</string>
    <string name="return_accepted">Return Accepted</string>
    <string name="i_am_returned">I am reached and Returned</string>
    <string name="Pickedup">Pickedup</string>
    <string name="Accepted">Accepted</string>
    <string name="Pending">Pending</string>
</resources>