<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/lay_con"
    android:padding="5dp"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/left_arrow"
        android:padding="5dp"
        android:id="@+id/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/back"
        android:textSize="15sp"
        android:textColor="@color/text_color_light"
        android:fontFamily="@font/noto_sans_regular"
        android:layout_marginStart="5dp"
        android:gravity="center"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btn_back"
        android:layout_height="30dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:visibility="gone"
        android:id="@+id/lay_current_location"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:id="@+id/im_stage4"
            android:padding="3dp"
            android:src="@drawable/circle_normal_tick"
            android:layout_height="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/current_location"
            android:textSize="12sp"
            android:id="@+id/tv_location"
            android:textColor="@color/text_color_light"
            android:fontFamily="@font/noto_sans_regular"
            android:gravity="center"
            android:paddingStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_height="30dp"/>
    </LinearLayout>



    <ImageView
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/order_receipt"
        android:id="@+id/img1"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back"/>

    <TextView
        android:layout_width="wrap_content"
        android:textColor="@color/text_color_light"
        android:fontFamily="@font/noto_sans_regular"
        android:layout_marginStart="5dp"
        android:gravity="center"
        android:id="@+id/tv_order_id"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/btn_back"
        app:layout_constraintLeft_toRightOf="@+id/img1"
        android:layout_height="30dp"/>

    <ImageView
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/place"
        android:id="@+id/img2"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img1"/>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/order_placed_on"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/text_color_light"
        android:fontFamily="@font/noto_sans_regular"
        android:layout_marginStart="5dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/img1"
        app:layout_constraintLeft_toRightOf="@+id/img2"
        android:layout_height="30dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/order_placed_on"
        android:textSize="16sp"
        android:id="@+id/tv_date"
        android:textColor="@color/md_grey_700"
        android:fontFamily="@font/noto_sans_regular"
        android:gravity="center"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/img1"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="30dp"/>


    <TextView
        android:layout_width="wrap_content"
        android:text="@string/payment_information"
        android:fontFamily="@font/noto_sans_regular"
        android:gravity="center"
        android:id="@+id/tv_payment_title"
        android:textStyle="bold"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img2"
        android:layout_height="30dp"
        android:textSize="16sp"
        android:textColor="@color/text_color_light"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="5dp"
        android:id="@+id/li_payment_title"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_payment_title"
        android:layout_height="100dp">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="4dp"
            android:layout_marginVertical="2dp"
            app:cardBackgroundColor="@color/white">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:id="@+id/tv_title1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/tv_type"
                    app:layout_constraintTop_toTopOf="parent"
                    android:text="@string/type"
                    android:textSize="16sp"
                    android:textColor="@color/text_color_light"
                    android:fontFamily="@font/noto_sans_regular"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_type"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_title1"
                    android:gravity="center"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="@color/text_color_light"
                    android:fontFamily="@font/noto_sans_regular"/>


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="4dp"
            android:layout_marginVertical="2dp"
            app:cardBackgroundColor="@color/white">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/tv_title2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tv_amount"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/amount"
                android:textSize="16sp"
                android:textColor="@color/text_color_light"
                android:fontFamily="@font/noto_sans_regular"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_amount"
                android:textStyle="bold"
                android:gravity="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title2"
                android:textSize="16sp"
                android:textColor="@color/text_color_light"
                android:fontFamily="@font/noto_sans_regular"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="4dp"
            android:layout_marginVertical="2dp"
            app:cardBackgroundColor="@color/white">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:id="@+id/tv_title3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tv_status"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/status"
                android:textSize="16sp"
                android:textColor="@color/text_color_light"
                android:fontFamily="@font/noto_sans_regular"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_status"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title3"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/text_color_light"
                android:fontFamily="@font/noto_sans_regular"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/customer_contact_information"
        android:fontFamily="@font/noto_sans_regular"
        android:gravity="center"
        android:id="@+id/tv_contact_title"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/li_payment_title"
        android:layout_height="30dp"
        android:textSize="16sp"
        android:textColor="@color/text_color_light"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:padding="5dp"
        android:id="@+id/con_contact"
        android:background="@color/text_baground"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_contact_title"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_contact_person_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/contact_person"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:textColor="@color/text_color_light"
            android:fontFamily="@font/noto_sans_regular"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_mobile_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_contact_person_title"
            android:text="@string/mobile_number"
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/text_color_light"
            android:fontFamily="@font/noto_sans_regular"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_mobile"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_mobile_title"
            android:textSize="16sp"
            android:textColor="@color/text_color_light"
            android:fontFamily="@font/noto_sans_regular"/>


        <TextView
            android:layout_width="wrap_content"
            android:text="@string/call"
            android:textSize="17sp"
            android:id="@+id/tv_call"
            android:fontFamily="@font/noto_sans_regular"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:textColor="@color/purple_200"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_mobile_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="30dp"/>



        <TextView
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_al_mobile_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_mobile"
            android:text="@string/addi_mobile_number"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/text_color_light"
            android:fontFamily="@font/noto_sans_regular"/>

        <TextView
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_al_mobile"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_al_mobile_title"
            android:textSize="16sp"
            android:layout_marginTop="2dp"
            android:textColor="@color/text_color_light"
            android:fontFamily="@font/noto_sans_regular"/>

        <TextView
            android:layout_width="wrap_content"
            android:text="@string/call"
            android:textSize="16sp"
            android:id="@+id/tv_call1"
            android:visibility="gone"
            android:fontFamily="@font/noto_sans_regular"
            android:gravity="center"
            android:layout_marginEnd="10dp"
            android:textColor="@color/purple_200"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/tv_al_mobile_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="30dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:layout_width="wrap_content"
        android:text="@string/delivery_address"
        android:fontFamily="@font/noto_sans_regular"
        android:gravity="center"
        android:id="@+id/tv_address_title"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/con_contact"
        android:layout_height="30dp"
        android:textSize="16sp"
        android:textColor="@color/text_color_light"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/con_address"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="@color/text_baground"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_address_title"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="16sp"
            android:layout_marginTop="5dp"
            android:textColor="@color/text_color_light"
            android:fontFamily="@font/noto_sans_regular"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/map_view"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/con_address"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:layout_height="300dp">
    </androidx.fragment.app.FragmentContainerView>

    <include
        android:id="@+id/ln_progressbar"
        layout="@layout/progress_bar_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>